--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @import url('https://fonts.googleapis.com/css?family=Oswald:400,600|Sacramento|Source+Sans+Pro:300&subset=latin-ext');
 
 /* Variables */
@@ -37,7 +38,7 @@ body {
   span {
     text-transform: none;
     font-weight: 400;
-    color: lighten($color-dark, 20%);
+    color: color.adjust($color-dark, $lightness: 20%);
   }
 }
 
