--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,5 @@
 @use "sass:color";
+
 @import url('https://fonts.googleapis.com/css?family=Oswald:400,600|Sacramento|Source+Sans+Pro:300&subset=latin-ext');
 
 /* Variables */
@@ -35,6 +36,7 @@ body {
   text-transform: uppercase;
   font-family: $font-header;
   font-weight: 600;
+
   span {
     text-transform: none;
     font-weight: 400;
@@ -81,6 +83,7 @@ body {
   list-style-type: none;
   margin: 0;
   padding: 0;
+
   .active {
     font-weight: bold;
   }
@@ -104,6 +107,7 @@ body {
 
 .post {
   display: none;
+
   &.active {
     display: block;
   }
@@ -115,6 +119,7 @@ body {
 
 .post-tags {
   display: flex;
+
   p {
     margin: 0 10px 0 0;
   }
@@ -124,8 +129,8 @@ body {
 
 .tag-size-1 {font-size: 80%; color: #800000; text-decoration: none; }
 .tag-size-2 {font-size: 90%; color: #e60000; text-decoration: none; }
-.tag-size-3 {font-size: 100%; color: #ff3333; text-decoration: none; }
-.tag-size-4 {font-size:  110%; color: #ff6666; text-decoration: none; }
+.tag-size-3 {font-size: 100%; color: #f33; text-decoration: none; }
+.tag-size-4 {font-size:  110%; color: #f66; text-decoration: none; }
 .tag-size-5 {font-size: 120%; color: #1a0000; text-decoration: none; }
 
 .tags li { display: inline-block; margin: 0 5px 5px 0; }
